buttons and output func

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
-  <head>
-    <title>Javascript calculator</title>
-  </head>
+  <head> </head>
   <body>
     <script src="calc-app.js"></script>
   </body>
